--- a/config.yaml
+++ b/config.yaml
@@ -1,3 +1,7 @@
-baseURL: http://example.org/
+baseURL = "/"
 languageCode: en-us
-title: My New Hugo Site
+title: r-rse
+
+
+themesDir = "themes"
+theme = "hugo-hero-theme"
