Edit summary card path

--- a/config.toml
+++ b/config.toml
@@ -26,7 +26,7 @@ theme = "hugo-hero-theme"
     meta_og_title = "Dr Anna Krystalli | r-rse"
     meta_og_type = "website"
     meta_og_url = "https://r-rse.eu"
-    meta_og_image = "/images/summary-card.png"
+    meta_og_image = "https://r-rse.eu/images/summary-card.png"
     meta_og_description = "Dr. Anna Krystalli - Research Software Engineering Services in R."
     meta_twitter_card = "summary"
     meta_twitter_site = "@annakrystalli"
