update contact details and legal entity

--- a/data/contact.yaml
+++ b/data/contact.yaml
@@ -1,6 +1,10 @@
 email: 'r.rse.eu@gmail.com'
 phone: '+30 697 299 3354'
-businessName: 'r-rse Services'
+name: 'Dr Anna Krystalli CEO'
+services: 'Research Software Engineering Services in R'
+general_commerce_number: '165471738000'
+businessName: 'R-RSE Single Member Private Company'
 address: |
-  Dani, Syros
-  84100, Greece
+  Antoniou Matesi 5 & Nikolaou Xrysou
+  Ermoupoli, 84100 
+  Syros, Greece
